--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   firebase_storage: ^13.0.0
   firebase_database: ^12.0.0
   particles_flutter: ^1.0.0
+  page_curl_effect: ^1.0.1
+  font_awesome_flutter: ^10.5.0
+  flutter_shaders: ^0.1.3 
 
   
 dev_dependencies:
@@ -84,7 +87,10 @@ flutter:
   assets:
     - assets/imgs/
     - assets/imgs/avatares/
+    - assets/imgs/revolvers/
     - assets/audio/
+  shaders:
+    - shaders/windy_poster.frag
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
